Update test annotations AND fix `new Integer`...
... Being called EVERYWHERE in Apache Harmony tests. That's been deprecated for removal as part of the Never-Ending Project Valhalla Circus.