@@ -121,7 +121,7 @@ public class EnumMapTest extends TestCase {
 		}
 
 		enumColorMap = new EnumMap<Double>(Color.class);
-		Double double1 = new Double(1);
+		Double double1 = Double.valueOf(1);
 		enumColorMap.put(Color.Green, 2);
 		enumColorMap.put(Color.Blue, double1);
 
@@ -167,7 +167,7 @@ public class EnumMapTest extends TestCase {
 		hashColorMap.put(Size.Big, 3);
 
 		hashColorMap = new HashMap();
-		hashColorMap.put(new Integer(1), 1);
+		hashColorMap.put(Integer.valueOf(1), 1);
 	}
 
 	@SuppressWarnings({"unchecked", "boxing"})
@@ -194,7 +194,7 @@ public class EnumMapTest extends TestCase {
 		assertFalse("Returned true for uncontained key", enumSizeMap
 			.containsKey(Color.Red));
 		assertFalse("Returned true for uncontained key", enumSizeMap
-			.containsKey(new Integer("3")));
+			.containsKey(Integer.valueOf("3")));
 		assertFalse("Returned true for uncontained key", enumSizeMap
 			.containsKey(null));
 	}
@@ -202,7 +202,7 @@ public class EnumMapTest extends TestCase {
 	@SuppressWarnings({"unchecked"})
 	public void test_clone() {
 		EnumMap enumSizeMap = new EnumMap(Size.class);
-		Integer integer = new Integer("3");
+		Integer integer = Integer.valueOf("3");
 		enumSizeMap.put(Size.Small, integer);
 		EnumMap enumSizeMapClone = new EnumMap(enumSizeMap);
 		assertNotSame("Should not be same", enumSizeMap, enumSizeMapClone);
@@ -221,8 +221,8 @@ public class EnumMapTest extends TestCase {
 	@SuppressWarnings({"unchecked", "boxing"})
 	public void test_containsValueLjava_lang_Object() {
 		EnumMap enumSizeMap = new EnumMap(Size.class);
-		Double double1 = new Double(3);
-		Double double2 = new Double(3);
+		Double double1 = Double.valueOf(3);
+		Double double2 = Double.valueOf(3);
 
 		assertFalse("Returned true for uncontained value", enumSizeMap
 			.containsValue(double1));
@@ -269,11 +269,11 @@ public class EnumMapTest extends TestCase {
 			.contains(mockEntry));
 		assertFalse("Returned true for uncontained object", set
 			.contains(Size.Small));
-		mockEntry = new MockEntry(new Integer(1), 1);
+		mockEntry = new MockEntry(Integer.valueOf(1), 1);
 		assertFalse("Returned true for uncontained object", set
 			.contains(mockEntry));
 		assertFalse("Returned true for uncontained object", set
-			.contains(new Integer(1)));
+			.contains(Integer.valueOf(1)));
 
 		mockEntry = new MockEntry(Size.Big, null);
 		assertTrue("Returned false for contained object", set
@@ -284,11 +284,11 @@ public class EnumMapTest extends TestCase {
 			.contains(mockEntry));
 		assertFalse("Returned true when the object can not be removed", set
 			.remove(mockEntry));
-		mockEntry = new MockEntry(new Integer(1), 1);
+		mockEntry = new MockEntry(Integer.valueOf(1), 1);
 		assertFalse("Returned true when the object can not be removed", set
 			.remove(mockEntry));
 		assertFalse("Returned true when the object can not be removed", set
-			.remove(new Integer(1)));
+			.remove(Integer.valueOf(1)));
 
 		// The set is backed by the map so changes to one are reflected by the
 		// other.
@@ -364,7 +364,7 @@ public class EnumMapTest extends TestCase {
 		assertNull("Should be null", array1[2]);
 
 		set = enumSizeMap.entrySet();
-		Integer integer = new Integer("1");
+		Integer integer = Integer.valueOf("1");
 		assertFalse("Returned true when the object can not be removed", set
 			.remove(integer));
 		assertTrue("Returned false when the object can be removed", set
@@ -380,7 +380,7 @@ public class EnumMapTest extends TestCase {
 		mockEntry = new MockEntry(Size.Middle, 2);
 		assertFalse("Returned true for uncontained object", set
 			.contains(mockEntry));
-		mockEntry = new MockEntry(new Integer(2), 2);
+		mockEntry = new MockEntry(Integer.valueOf(2), 2);
 		assertFalse("Returned true for uncontained object", set
 			.contains(mockEntry));
 		entry = (Map.Entry) iter.next();
@@ -423,7 +423,7 @@ public class EnumMapTest extends TestCase {
 //        entry.setValue(2);
 //        assertTrue("Returned false for contained object", set.contains(entry));
 		assertFalse("Returned true for uncontained object", set
-			.remove(new Integer(1)));
+			.remove(Integer.valueOf(1)));
 
 		iter.next();
 		assertEquals("Wrong key", Size.Big, entry.getKey());
@@ -505,7 +505,7 @@ public class EnumMapTest extends TestCase {
 		assertTrue("Returned false for equal EnumMap", enumMap.equals(hashMap));
 
 		assertFalse("Should return false", enumSizeMap
-			.equals(new Integer(1)));
+			.equals(Integer.valueOf(1)));
 	}
 
 	public void test_iterator() {
@@ -539,7 +539,7 @@ public class EnumMapTest extends TestCase {
 		assertFalse("Returned true for uncontained object", set
 			.contains(Size.Small));
 		assertFalse("Returned true for uncontained object", set
-			.contains(new Integer(1)));
+			.contains(Integer.valueOf(1)));
 		assertTrue("Returned false when the object can be removed", set
 			.remove(Size.Big));
 		assertFalse("Returned true for uncontained object", set
@@ -547,7 +547,7 @@ public class EnumMapTest extends TestCase {
 		assertFalse("Returned true when the object can not be removed", set
 			.remove(Size.Big));
 		assertFalse("Returned true when the object can not be removed", set
-			.remove(new Integer(1)));
+			.remove(Integer.valueOf(1)));
 
 		// The set is backed by the map so changes to one are reflected by the
 		// other.
@@ -687,7 +687,7 @@ public class EnumMapTest extends TestCase {
 		assertNull("Get returned non-null for non existent key", enumSizeMap
 			.get(Color.Red));
 		assertNull("Get returned non-null for non existent key", enumSizeMap
-			.get(new Integer(1)));
+			.get(Integer.valueOf(1)));
 		assertNull("Get returned non-null for non existent key", enumSizeMap
 			.get(null));
 
@@ -700,15 +700,15 @@ public class EnumMapTest extends TestCase {
 		assertNull("Get returned non-null for non mapped key", enumColorMap
 			.get(Color.Blue));
 
-		enumColorMap.put(Color.Green, new Double(4));
+		enumColorMap.put(Color.Green, Double.valueOf(4));
 		assertEquals("Get returned incorrect value for given key",
-			new Double(4), enumColorMap.get(Color.Green));
-		enumColorMap.put(Color.Green, new Integer("3"));
-		assertEquals("Get returned incorrect value for given key", new Integer(
+			Double.valueOf(4), enumColorMap.get(Color.Green));
+		enumColorMap.put(Color.Green, Integer.valueOf("3"));
+		assertEquals("Get returned incorrect value for given key", Integer.valueOf(
 			"3"), enumColorMap.get(Color.Green));
 		enumColorMap.put(Color.Green, null);
 		assertNull("Can not handle null value", enumColorMap.get(Color.Green));
-		Float f = new Float("3.4");
+		Float f = Float.valueOf("3.4");
 		enumColorMap.put(Color.Green, f);
 		assertSame("Get returned incorrect value for given key", f,
 			enumColorMap.get(Color.Green));
@@ -737,18 +737,18 @@ public class EnumMapTest extends TestCase {
 		assertNull("Return non-null for non mapped key", enumColorMap.put(
 			Color.Green, 2));
 		assertEquals("Return wrong value", 2, enumColorMap.put(Color.Green,
-			new Double(4)));
-		assertEquals("Return wrong value", new Double(4), enumColorMap.put(
-			Color.Green, new Integer("3")));
-		assertEquals("Return wrong value", new Integer("3"), enumColorMap.put(//$NON-NLS-2$
+			Double.valueOf(4)));
+		assertEquals("Return wrong value", Double.valueOf(4), enumColorMap.put(
+			Color.Green, Integer.valueOf("3")));
+		assertEquals("Return wrong value", Integer.valueOf("3"), enumColorMap.put(//$NON-NLS-2$
 			Color.Green, null));
-		Float f = new Float("3.4");
+		Float f = Float.valueOf("3.4");
 		assertNull("Return non-null for non mapped key", enumColorMap.put(
 			Color.Green, f));
 		assertNull("Return non-null for non mapped key", enumColorMap.put(
 			Color.Blue, 2));
 		assertEquals("Return wrong value", 2, enumColorMap.put(Color.Blue,
-			new Double(4)));
+			Double.valueOf(4)));
 	}
 
 	@SuppressWarnings({"unchecked", "boxing"})
@@ -793,9 +793,9 @@ public class EnumMapTest extends TestCase {
 			enumColorMap.get(Color.Green));
 		assertNull("Get returned non-null for non mapped key", enumColorMap
 			.get(Color.Red));
-		hashColorMap.put(Color.Red, new Integer(1));
+		hashColorMap.put(Color.Red, Integer.valueOf(1));
 		enumColorMap.putAll(hashColorMap);
-		assertEquals("Get returned incorrect value for given key", new Integer(
+		assertEquals("Get returned incorrect value for given key", Integer.valueOf(
 			2), enumColorMap.get(Color.Green));
 		hashColorMap.put(Size.Big, 3);
 		try {
@@ -806,7 +806,7 @@ public class EnumMapTest extends TestCase {
 		}
 
 		hashColorMap = new HashMap();
-		hashColorMap.put(new Integer(1), 1);
+		hashColorMap.put(Integer.valueOf(1), 1);
 		try {
 			enumColorMap.putAll(hashColorMap);
 			fail("Expected ClassCastException");
@@ -834,15 +834,15 @@ public class EnumMapTest extends TestCase {
 		assertNull("Remove of non-existent key returned non-null", enumSizeMap
 			.remove(Color.Red));
 		assertNull("Remove of non-existent key returned non-null", enumSizeMap
-			.remove(new Double(4)));
+			.remove(Double.valueOf(4)));
 		assertNull("Remove of non-existent key returned non-null", enumSizeMap
 			.remove(null));
 
 		EnumMap enumColorMap = new EnumMap<Double>(Color.class);
 		assertNull("Get returned non-null for non mapped key", enumColorMap
 			.get(Color.Green));
-		enumColorMap.put(Color.Green, new Double(4));
-		assertEquals("Remove returned incorrect value", new Double(4),
+		enumColorMap.put(Color.Green, Double.valueOf(4));
+		assertEquals("Remove returned incorrect value", Double.valueOf(4),
 			enumColorMap.remove(Color.Green));
 		assertNull("Get returned non-null for non mapped key", enumColorMap
 			.get(Color.Green));
@@ -898,7 +898,7 @@ public class EnumMapTest extends TestCase {
 		Collection collection1 = new EnumMap.Values(enumColorMap);
 		assertEquals("Should be equal", collection1, collection);
 		try {
-			collection.add(new Integer(1));
+			collection.add(Integer.valueOf(1));
 			fail("Should throw UnsupportedOperationException");
 		} catch (UnsupportedOperationException e) {
 			// Expected
@@ -936,9 +936,9 @@ public class EnumMapTest extends TestCase {
 		enumColorMap.put(Color.Blue, null);
 		collection = enumColorMap.values();
 		Collection c = new ArrayList();
-		c.add(new Integer(1));
+		c.add(Integer.valueOf(1));
 		assertTrue("Should return true", collection.containsAll(c));
-		c.add(new Double(3.4));
+		c.add(Double.valueOf(3.4));
 		assertFalse("Should return false", collection.containsAll(c));
 		assertTrue("Should return true", collection.removeAll(c));
 		assertEquals("Wrong size", 1, collection.size());
@@ -969,7 +969,7 @@ public class EnumMapTest extends TestCase {
 
 		assertEquals("Wrong size", 2, collection.size());
 		assertFalse("Returned true when the object can not be removed",
-			collection.remove(new Integer("10")));
+			collection.remove(Integer.valueOf("10")));
 
 		Iterator iter = enumColorMap.values().iterator();
 		Object value = iter.next();
@@ -1001,13 +1001,13 @@ public class EnumMapTest extends TestCase {
 		assertTrue("Returned false for contained object", collection
 			.contains(value));
 		assertTrue("Returned false for contained object", collection
-			.remove(new Integer("1")));
+			.remove(Integer.valueOf("1")));
 		assertEquals("Wrong size", 1, collection.size());
 		collection.clear();
 		assertEquals("Wrong size", 0, collection.size());
 
 		enumColorMap = new EnumMap<Double>(Color.class);
-		Integer integer1 = new Integer(1);
+		Integer integer1 = Integer.valueOf(1);
 		enumColorMap.put(Color.Green, integer1);
 		enumColorMap.put(Color.Blue, null);
 		collection = enumColorMap.values();
