@@ -33,7 +33,7 @@ public class ObjectOrderedSetTest {
 	static {
 		objArray = new Object[1000];
 		for (int i = 0; i < objArray.length; i++)
-			objArray[i] = new Integer(i);
+			objArray[i] = Integer.valueOf(i);
 	}
 
 	@Test
@@ -82,11 +82,11 @@ public class ObjectOrderedSetTest {
 	public void test_addLjava_lang_Object() {
 		// Test for method boolean com.github.tommyettinger.ds.ObjectOrderedSet.add(java.lang.Object)
 		int size = hs.size();
-		hs.add(new Integer(8));
+		hs.add(Integer.valueOf(8));
 		Assert.assertTrue("Added element already contained by set", hs.size() == size);
-		hs.add(new Integer(-9));
+		hs.add(Integer.valueOf(-9));
 		Assert.assertTrue("Failed to increment set size after add", hs.size() == size + 1);
-		Assert.assertTrue("Failed to add element to set", hs.contains(new Integer(-9)));
+		Assert.assertTrue("Failed to add element to set", hs.contains(Integer.valueOf(-9)));
 	}
 
 	@Test
@@ -137,8 +137,8 @@ public class ObjectOrderedSetTest {
 		// Test for method boolean
 		// com.github.tommyettinger.ds.ObjectOrderedSet.remove(java.lang.Object)
 		int size = hs.size();
-		hs.remove(new Integer(98));
-		Assert.assertTrue("Failed to remove element", !hs.contains(new Integer(98)));
+		hs.remove(Integer.valueOf(98));
+		Assert.assertTrue("Failed to remove element", !hs.contains(Integer.valueOf(98)));
 		Assert.assertTrue("Failed to decrement set size", hs.size() == size - 1);
 	}
 
